# elvcrawl

./: Cargo.toml  README.md
src/: crawler.rs  graph.rs  indexer.rs  lib.rs  searcher.rs  utils.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs  test_metadata.rs
test-utils/test_data/: index.json  site.json  site_unresolved.json  title1.json  title2.json  title3.json
tests/: lib.rs
